28/09/2025: Item, User, Booking и Comment реализация PostgreSQL, JPA  - Добавлена реализация Booking and Comment;  - Реализованы эндмоинты User, Item, Booking и Comment;  - Используется PostgreSQL и JPA;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # Spring profile to control active repository implementation
-spring.profiles.active=memory
-#spring.profiles.active=jdbc
+spring.application.name=shareit
+spring.profiles.active=dev, jpa
+
+#spring.profiles.active=memory
+#spring.profiles.active=test
