--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,10 +24,10 @@ services:
       db:
         condition: service_healthy
     environment:
-      - SPRING_PROFILES_ACTIVE=pg,reset
-      #- SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      #- SPRING_DATASOURCE_USERNAME=shareit
-      #- SPRING_DATASOURCE_PASSWORD=shareit
+      - SPRING_PROFILES_ACTIVE=pg
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
+      - SPRING_DATASOURCE_USERNAME=shareit
+      - SPRING_DATASOURCE_PASSWORD=shareit
 
   db:
     image: postgres:16.1
