--- a/server/src/main/resources/application-pg.properties
+++ b/server/src/main/resources/application-pg.properties
@@ -1,6 +1,5 @@
 # --- App ---
 spring.application.name=shareit
-spring.profiles.include=jpa
 server.port=9090
 
 # --- DataSource (PG) ---
@@ -10,8 +9,7 @@ spring.datasource.password=shareit
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- JPA/Hibernate ---
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 
