--- a/server/src/main/resources/application-reset.properties
+++ b/server/src/main/resources/application-reset.properties
@@ -8,7 +8,9 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:reset.sql
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 logging.level.org.springframework.jdbc.datasource.init=debug
