--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # Spring profile to control active repository implementation
 spring.application.name=shareit
 server.port=9090
+spring.profiles.include=jpa
 spring.jpa.open-in-view=false
