ci: fix Docker contexts + adjust compose; tests green

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       db:
         condition: service_healthy
     environment:
-      - SPRING_PROFILES_ACTIVE=pg,reset
+      - SPRING_PROFILES_ACTIVE=pg,jpa,reset
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
       - SPRING_DATASOURCE_USERNAME=shareit
       - SPRING_DATASOURCE_PASSWORD=shareit
@@ -42,4 +42,4 @@ services:
       test: ["CMD-SHELL","pg_isready -q -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
       interval: 5s
       timeout: 5s
-      retries: 10
+      retries: 20
