--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,21 @@
 services:
-  gateway:
-    build:
-      context: ./gateway
-      dockerfile: Dockerfile
-    image: shareit-gateway
-    container_name: shareit-gateway
-    ports:
-      - "8080:8080"
-    depends_on:
-      - server
+  db:
+    image: postgres:16
+    container_name: shareit-postgres
     environment:
-      - SHAREIT_SERVER_URL=http://server:9090
-
-  server:
-    build:
-      context: ./server
-      dockerfile: Dockerfile
-    image: shareit-server
-    container_name: shareit-server
+      - POSTGRES_PASSWORD=shareit
+      - POSTGRES_USER=shareit
+      - POSTGRES_DB=shareit
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
     ports:
-      - "9090:9090"
+      - "6541:5432"
+
+  server-reset:
+    image: shareit-server
     depends_on:
       db:
         condition: service_healthy
@@ -28,18 +24,44 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
       - SPRING_DATASOURCE_USERNAME=shareit
       - SPRING_DATASOURCE_PASSWORD=shareit
+    command: [ "sh", "-c", "java -jar /app/app.jar & pid=$!; sleep 12; kill $pid || true" ]
+    restart: "no"
+    profiles: ["init"]
 
-  db:
-    image: postgres:16.1
-    container_name: shareit-postgres
-    ports:
-      - "6541:5432"
+  server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    image: shareit-server
+    container_name: shareit-server
+    depends_on:
+      db:
+        condition: service_healthy
+      server-reset:
+        condition: service_completed_successfully
     environment:
-      - POSTGRES_PASSWORD=shareit
-      - POSTGRES_USER=shareit
-      - POSTGRES_DB=shareit
+      - SPRING_PROFILES_ACTIVE=pg,jpa
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
+      - SPRING_DATASOURCE_USERNAME=shareit
+      - SPRING_DATASOURCE_PASSWORD=shareit
+    ports:
+      - "9090:9090"
     healthcheck:
-      test: ["CMD-SHELL","pg_isready -q -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+      test: ["CMD", "curl", "-f", "http://localhost:9090/actuator/health"]
       interval: 5s
-      timeout: 5s
-      retries: 20
+      timeout: 3s
+      retries: 30
+
+  gateway:
+    build:
+      context: ./gateway
+      dockerfile: Dockerfile
+    image: shareit-gateway
+    container_name: shareit-gateway
+    depends_on:
+      server:
+        condition: service_healthy
+    environment:
+      - SHAREIT_SERVER_URL=http://server:9090
+    ports:
+      - "8080:8080"
