--- a/server/src/main/resources/application-pg.properties
+++ b/server/src/main/resources/application-pg.properties
@@ -9,9 +9,12 @@ spring.datasource.password=shareit
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- JPA/Hibernate ---
-spring.jpa.hibernate.ddl-auto=validate
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
+
 
 # --- Logs ---
 logging.level.org.hibernate.SQL=debug
