ci: fix Docker contexts + adjust compose; tests green

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,13 +23,13 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      server-reset:
-        condition: service_completed_successfully
     environment:
-      - SPRING_PROFILES_ACTIVE=pg
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/shareit
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
       - SPRING_DATASOURCE_USERNAME=shareit
       - SPRING_DATASOURCE_PASSWORD=shareit
+      - SPRING_SQL_INIT_MODE=always
+      - SPRING_SQL_INIT_SCHEMA_LOCATIONS=classpath:schema.sql
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=none
     ports:
       - "9090:9090"
     healthcheck:
